# mlops2026

./: .gitignore  Dockerfile  README.md  app.py  compose.yml  eda.ipynb  feature_store.py  index.html  mlops.html  model_metrics.json  monitor.py  presentacion_mlops_avanzado.html  pyproject.toml  retrain.py  train.py
.github/workflows/: ci_cd.yml  retrain.yml
tests/: test_pipeline.py
