[project]
name = "mlops-exercise"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Zapata",email = "pansezapata@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (<3)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "mlflow (>=3.11.1,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pyarrow (<24)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
